# otus-cpp-basics

./: README.md
2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  move_me_out.cpp  move_me_out.h
HW3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  file.cpp  func.h  game.cpp  guess_the_number.cpp  struct.h  test_log
HW4/: check-log.txt  valgrind-out.txt
HW4/include/: ._parser.hpp  astnode.hpp  errors.hpp  lexer.hpp  mathops.hpp  parser.hpp
HW4/src/: .parser.cpp.swp  astnode.cpp  lexer.cpp  parser.cpp
HW5/: CMakeCache.txt  Makefile  chrono_example  cmake_install.cmake  random_shuffle  statistics  statistics.cpp  test-output
HW6/: CMakeLists.txt  check-output.txt  l1_linked_container.hpp  l2_linked_container.hpp  main.cpp  serial_container.hpp  simple_iterator.cpp  valgrind-out
HW7/: CMakeLists.txt  l1_linked_container.hpp  l2_linked_container.hpp  l2_linked_tests.cpp  main.cpp  report  valgrind-out  valgrind-out-tests  vector_tests.cpp
HW8/: 1thread_out  1thread_result  2thread_result  2thread_vocabulary_per_thread_result  2threads_out  CMakeLists.txt  topk.2threads_with_mutex  topk.cpp
Project/: CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  convert_showisisdb.py  prepare_json.sh  ready_for_repl.json  repl  subs.txt  test.json  tests
Project/include/: fsm.hpp  get_version.h  io.hpp  isis.hpp  parser.hpp  tinyfsm.hpp  utils.hpp  version.h
Project/src/: get_version.cpp  main.cpp  tests.cpp
